--- a/Liaison.Converter.CurrentOps/Liaison.Converter.CurrentOps.csproj
+++ b/Liaison.Converter.CurrentOps/Liaison.Converter.CurrentOps.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FDD46318-78C9-4CFF-91E3-5D146A347753}</ProjectGuid>
+    <ProjectGuid>{B905AF7B-48CC-49CE-8645-E888C58F5A75}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Liaison.Import</RootNamespace>
-    <AssemblyName>Liaison.Import</AssemblyName>
+    <RootNamespace>Liaison.Converter.CurrentOps</RootNamespace>
+    <AssemblyName>Liaison.Converter.CurrentOps</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -32,9 +32,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HtmlAgilityPack, Version=1.6.8.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
-      <HintPath>..\packages\HtmlAgilityPack.1.6.8\lib\Net45\HtmlAgilityPack.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,7 +47,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Liaison.Biz\Liaison.Biz.csproj">
