--- a/Liaison.Helper/Liaison.Helper.csproj
+++ b/Liaison.Helper/Liaison.Helper.csproj
@@ -35,6 +35,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,8 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CurrentOpsHelper.cs" />
     <Compile Include="Enumerators\Enumerators.cs" />
+    <Compile Include="Helper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SystemWebHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
