--- a/Liaison.Biz/Liaison.Biz.csproj
+++ b/Liaison.Biz/Liaison.Biz.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Converter\ConvertToMilOrg.cs" />
+    <Compile Include="MilOrgs\BattalionOrg.cs" />
     <Compile Include="MilOrgs\HigherHqOrg.cs" />
     <Compile Include="MilOrgs\IMilitaryOrg.cs" />
     <Compile Include="MilOrgs\BaseOrg.cs" />
