--- a/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
+++ b/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
@@ -54,6 +54,7 @@
     <Compile Include="ConvertToMilOrgTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings\DivisionString.cs" />
+    <Compile Include="Strings\HHQBnCompanyString.cs" />
     <Compile Include="Strings\HHQBnString.cs" />
   </ItemGroup>
   <ItemGroup>
