--- a/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
+++ b/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="ConvertToMilOrgTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strings\BrigadeString.cs" />
     <Compile Include="Strings\DivisionString.cs" />
     <Compile Include="Strings\HHQBnCompanyString.cs" />
     <Compile Include="Strings\HHQBnString.cs" />
