updates to brigade convert, helper constants

--- a/Liaison.Helper/Liaison.Helper.csproj
+++ b/Liaison.Helper/Liaison.Helper.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\MilOrg.cs" />
     <Compile Include="CurrentOpsHelper.cs" />
     <Compile Include="Enumerators\Enumerators.cs" />
     <Compile Include="Helper.cs" />
