--- a/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
+++ b/Liaison.Biz.Tests/Liaison.Biz.Tests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Strings\BrigadeString.cs" />
     <Compile Include="Strings\DivisionString.cs" />
+    <Compile Include="Strings\FieldArmyString.cs" />
     <Compile Include="Strings\HHQBnCompanyString.cs" />
     <Compile Include="Strings\HHQBnString.cs" />
   </ItemGroup>
