--- a/Liaison.Biz/Liaison.Biz.csproj
+++ b/Liaison.Biz/Liaison.Biz.csproj
@@ -44,6 +44,7 @@
     <Compile Include="MilOrgs\BattalionOrg.cs" />
     <Compile Include="MilOrgs\BrigadeOrg.cs" />
     <Compile Include="MilOrgs\CompanyOrg.cs" />
+    <Compile Include="MilOrgs\FieldArmyOrg.cs" />
     <Compile Include="MilOrgs\HigherHqOrg.cs" />
     <Compile Include="MilOrgs\IMilitaryOrg.cs" />
     <Compile Include="MilOrgs\BaseOrg.cs" />
