--- a/Liaison.Web.Asp/Liaison.Web.Asp.csproj
+++ b/Liaison.Web.Asp/Liaison.Web.Asp.csproj
@@ -204,6 +204,7 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Orbat\Index.cshtml" />
+    <Content Include="Views\Orbat\NewAirForceBase.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
