--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Models\Equipment\BLLAircraft.cs" />
     <Compile Include="Models\ExtensionMethods.cs" />
     <Compile Include="Models\IBase.cs" />
+    <Compile Include="Models\NewWing.cs" />
     <Compile Include="Models\Unit\AirForceBase.cs" />
     <Compile Include="Models\Unit\AirSquadron.cs" />
     <Compile Include="Models\Unit\AUnit.cs" />
@@ -65,17 +66,20 @@
     <Compile Include="Models\Unit\Corps.cs" />
     <Compile Include="Models\Unit\DetachmentBll.cs" />
     <Compile Include="Models\Unit\Division.cs" />
+    <Compile Include="Models\Unit\Facility.cs" />
     <Compile Include="Models\Unit\FieldArmy.cs" />
     <Compile Include="Models\Unit\FiveStar.cs" />
+    <Compile Include="Models\Unit\Flight.cs" />
     <Compile Include="Models\Unit\FourStar.cs" />
     <Compile Include="Models\Equipment\IEquipment.cs" />
     <Compile Include="Models\Unit\IUnit.cs" />
     <Compile Include="Models\UnitRelationship.cs" />
     <Compile Include="Models\Unit\NamedFleet.cs" />
-    <Compile Include="Models\Unit\NavalAirWing.cs" />
+    <Compile Include="Models\Unit\AirWing.cs" />
     <Compile Include="Models\Unit\NavalSquadron.cs" />
     <Compile Include="Models\Unit\NumberedAirForce.cs" />
     <Compile Include="Models\Unit\NumberedFleet.cs" />
+    <Compile Include="Models\Unit\OneBar.cs" />
     <Compile Include="Models\Unit\OneStar.cs" />
     <Compile Include="Models\Unit\TacticalAirForce.cs" />
     <Compile Include="Models\Unit\TaskForceBll.cs" />
