--- a/Liaison.Web.Asp/Liaison.Web.Asp.csproj
+++ b/Liaison.Web.Asp/Liaison.Web.Asp.csproj
@@ -161,7 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\OrbatModel.cs" />
+    <Compile Include="Models\ViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
