--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Models\Unit\AirWing.cs" />
     <Compile Include="Models\Unit\NavalGroup.cs" />
     <Compile Include="Models\Unit\NavalSquadron.cs" />
+    <Compile Include="Models\Unit\NavalSquadronDivision.cs" />
     <Compile Include="Models\Unit\NumberedAirForce.cs" />
     <Compile Include="Models\Unit\NumberedFleet.cs" />
     <Compile Include="Models\Unit\OneBar.cs" />
