Added Battalion, Regiment, DB alterations

--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Models\Unit\AirSquadron.cs" />
     <Compile Include="Models\Unit\AUnit.cs" />
     <Compile Include="Models\Unit\AdminCorps.cs" />
+    <Compile Include="Models\Unit\Battalion.cs" />
     <Compile Include="Models\Unit\Brigade.cs" />
     <Compile Include="Models\Unit\Command.cs" />
     <Compile Include="Models\Unit\Corps.cs" />
