--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\NewWing.cs" />
     <Compile Include="Models\UnitTypeVariant.cs" />
     <Compile Include="Models\Objects\RelationshipTracker.cs" />
+    <Compile Include="Models\Unit\Directorate.cs" />
     <Compile Include="Models\Unit\Interfaces\IVolunteerUnit.cs" />
     <Compile Include="Models\Unit\AirForceBase.cs" />
     <Compile Include="Models\Unit\AirGroup.cs" />
@@ -90,6 +91,7 @@
     <Compile Include="Models\Unit\Interfaces\IUnit.cs" />
     <Compile Include="Models\UnitRelationship.cs" />
     <Compile Include="Models\Unit\JointGroup.cs" />
+    <Compile Include="Models\Unit\JointUnit.cs" />
     <Compile Include="Models\Unit\NamedFleet.cs" />
     <Compile Include="Models\Unit\AirWing.cs" />
     <Compile Include="Models\Unit\NavalGroup.cs" />
