script, added Notes to base, Colleges, Centres and AF Establishments

--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Models\UnitTypeVariant.cs" />
     <Compile Include="Models\Objects\RelationshipTracker.cs" />
     <Compile Include="Models\Unit\Abstracts\ThreeBlob.cs" />
+    <Compile Include="Models\Unit\AirForceEstablishment.cs" />
     <Compile Include="Models\Unit\Battery.cs" />
     <Compile Include="Models\Unit\Directorate.cs" />
     <Compile Include="Models\Unit\ExpeditionaryUnit.cs" />
