Added Azure Project

--- a/Liaison.BLL/Liaison.BLL.csproj
+++ b/Liaison.BLL/Liaison.BLL.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Models\Unit\Vessel.cs" />
     <Compile Include="Models\Objects\VesselClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Translators\ILiasonTranslator.cs" />
     <Compile Include="Translators\LiaisonSql.cs" />
   </ItemGroup>
   <ItemGroup>
